[package]
name = "wordle_daily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.4"
tokio = { version = "1", features = ["full"] }
tower-http = "0.1"
serde_json = "1"
tower = "0.4.13"
http = "0.2.9"

